[project]
name = "ibm-watsonx-gov-catalog-mcp-server"
version = "0.1.0"
description = "An IBM watsonx.governance mcp server that connects AI agents with marketplace of tools available on governance catalog "
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "IBM watsonx.governance" }
]

dependencies = [
     "mcp[cli]>=1.7.1",
     "ibm-watsonx-gov[tools]>=1.0.0",
     "anyio>=4.5",
     "click>=8.1.0"
 ]

long_description_content_type = "text/markdown"


[project.scripts]
ibm-watsonx-gov-catalog-mcp-server = "ibm_watsonx_gov_catalog_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



